// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableHeaderItem should render when not selected 1`] = `
<span
  className="sortable-header "
  onClick={[Function]}
>
  severity
</span>
`;

exports[`SortableHeaderItem should render when selected and sorting asc 1`] = `
<span
  className="sortable-header active"
  onClick={[Function]}
>
  <Icon
    name="angle-up"
    type="fa"
  />
  Severity
</span>
`;

exports[`SortableHeaderItem should render when selected and sorting desc 1`] = `
<span
  className="sortable-header active"
  onClick={[Function]}
>
  <Icon
    name="angle-down"
    type="fa"
  />
  Severity
</span>
`;
